# EmoCaps-FFN

./: .gitignore  dataload.py  iemocap_gan_ffn.py  iemocap_lstm.py  models.py  pyproject.toml  readme.txt  run.sh  train_gan_ffn.sh
