[tool.poetry]
name = "emocaps-ffn"
version = "0.1.0"
description = "GAN-FFN: 基于GAN的特征融合网络"
authors = ["Jing-yilin <yilin.jing.ai@outlook.com>"]
readme = "README.md"
packages = [{include = "emocaps_ffn"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
argparse = "^1.4.0"
torch = "^2.0.1"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
